# cpl

./: .gitignore  BUILD.md  CMakeLists.txt  EVENTS.md  README.md  base.hpp  base.hpp.md  build_cl.bat  crypto.hpp  crypto.hpp.md  naion.hpp  net.hpp  net.hpp.md  plugins.hpp  sodium.hpp  sodium.hpp.md  strings.hpp  strings.hpp.md
crypto/: bigint.hpp  ecc.hpp  ecdh.hpp
naion/: CLAUDE.md  PROTOCOL.md  README.md  csm.c  csm.go  csm.h  csm.py  edwards_conv.go  go.mod  naion.c  naion.go  naion.h  naion_impl.cpp  naion_test.go  plan01.md  plan02.md  plan03.md  test_naion.py
naion/go/: go.mod  naion.go
naion/go/test/go_peer/: main.go
naion/python/: naion.py
naion/python/test/: csm_test.py
naion/test/: c_peer.c  csm_test.go  csm_test.py  test.c
naion/test/go_peer/: main.go
test/: entry.cpp  musl.Dockerfile  test_crypto.cpp  test_file.cpp  test_libsodium.cpp  test_main.cpp  test_naion.cpp  test_naion_libsodium_interop.cpp  test_net.cpp  test_plugins.cpp  test_service.cpp  test_session_multi.cpp  test_strings.cpp  test_sys_crypto.cpp  test_sys_network.cpp  test_thread.cpp  test_trick.cpp  test_win32_utility.cpp
utility/: base.hpp  base_raii.hpp  crypto.hpp  format.hpp  logger.hpp  net.hpp  strings.hpp  time.hpp  win32.hpp
win32/: api.hpp  api.hpp.md  api_gen.py  crypto.hpp  crypto.hpp.md  file.hpp  file.hpp.md  hardware.hpp  logger.hpp  network.hpp  network.hpp.md  service.hpp  service.hpp.md  sys.hpp  sys.hpp.md  thread.hpp  thread.hpp.md  utility.hpp
